--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
-
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 /**
  * This is the configuration block to customize your React Native Android app.
  * By default you don't need to apply any configuration, just uncomment the lines you need.
@@ -86,6 +86,12 @@ android {
         versionName "1.0"
     }
     signingConfigs {
+        release {
+        storeFile file('my-release-key.keystore')
+        storePassword 'nguyenvantu'
+        keyAlias 'my-key-alias'
+        keyPassword 'nguyenvantu'
+        }
         debug {
             storeFile file('debug.keystore')
             storePassword 'android'
@@ -101,6 +107,7 @@ android {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
             signingConfig signingConfigs.debug
+            // signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
