--- a/package.json
+++ b/package.json
@@ -10,8 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "@maplibre/maplibre-react-native": "^10.0.0-alpha.22",
+    "@react-native-community/geolocation": "^3.4.0",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "axios": "^1.7.7",
+    "lodash": "^4.17.21",
+    "nativewind": "^2.0.11",
     "react": "18.3.1",
-    "react-native": "0.75.4"
+    "react-native": "0.75.4",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "^3.35.0",
+    "react-native-sound": "^0.11.2",
+    "react-native-toast-message": "^2.2.1",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -28,6 +41,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
+    "tailwindcss": "^3.3.2",
     "typescript": "5.0.4"
   },
   "engines": {
